# cmake-init

./: ADAPT  CMakeLists.txt  README.md  configure
cmake/: PlatformLinuxGCC.cmake  PlatformMacOS.cmake  PlatformWindowsGCC.cmake  PlatformWindowsMSVC.cmake
deploy/: CMakeLists.txt  pack-template.cmake
source/: CMakeLists.txt  template-meta.cpp.in
source/fibcmd/: CMakeLists.txt  main.cpp
source/fiblib/: CMakeLists.txt
source/fiblib/include/fiblib/: Fibonacci.h  fiblib_api.h  fiblib_meta.h
source/fiblib/source/: Fibonacci.cpp
source/tests/: CMakeLists.txt
source/tests/fiblib-test/: CMakeLists.txt  fibonacci_test.cpp
